// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakout: should be able to switch to center mode back 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to full-width mode 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "full-width",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to wide mode 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;
